Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.17
* Address now shows on ECA selection screen (Erik H)
* Taxes::Simple now respects min/max values based on subtotal (Chris T)

Changelog for 1.3.16

* Changes in <head> element for non-Latin characters, HTML invoices (Erik H)
* Corrected untranslated string in Contact management screen (Chris T)
* Corrected permissions issue creating pricelist (Chris T, 3513861)
* Correcting ordering of aging reports so currencies are clustered (Chris T)
* Fixed curr totals not showing for aging rpts (Chris T, 3512591, h/t John L)
* Fixed new user screen not respecting default country (Chris T, 3513760)
* Fixed hash(...) in HTML payment receipt (Chris T, 3515924, h/t Michael R)
* Fixed errors about Concat() not found on Pg 8.4 (Erik H)
* Fixed can't edit templates with absolute templates path (Chris T 3516725)
* Added API for minimum value for taxes for local tax modules (Chris T)
* Added API (but not UI) for tax max value (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann
John L is John Locke
Michael R is Michael Richardson


Changelog for 1.3.15
* Update WX POS (almost there) - readme and code  (Andres B, item 3516949)
* Adding Perl-based database-setup and teardown scripts (Chris B)
* Corrected build issues w/Makefile due to inclusion of LedgerSMB.pm (Chris T)
* ledgersmb.conf.default : Update default PATH (H Sorli, item 3430019)
* Fixed imballanced payments when early payment discount processed (Chris T)
* Pricelists exportable as PDF and CSV (Chris T)
* Fixed payment/receipts shows with 0 due/payment list (Erik H, bug 3512555)
* Correct POD spelling error in LedgerSMB/Form.pm (Robert C, bug 3472015)
* Fixed Reconciliation.sql not loading (Erik H)

Andres B is Andres Basile
Chris B is Chris Bennet
Chris T is Chris Travers
H Sorli is Havard Sorli
Robert C is Robert James Clay

Changelog for 1.3.14