@@ -5,6 +5,10 @@ Supported Presently
 Changelog for 1.3.17
 * Address now shows on ECA selection screen (Erik H)
 * Taxes::Simple now respects min/max values based on subtotal (Chris T)
+* Fixed company name/address missing from income statement (Chris T, h/t Mark L)
+* Fixed company name/address missing from balance sheet (Chris T, h/t Mark L)
+
+Mark L is Matt Lubratt
 
 Changelog for 1.3.16
 
